syntax = "proto3";
package badges.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object for the module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/bitbadges/bitbadgeschain/x/badges"
  };

  // authority defines the custom module authority. If not set, defaults to the governance module.
  string authority = 1;

  // payout_address defines where to send the revenue from the module
  string payout_address = 2;

  // fixed_cost_per_transfer defines the fixed cost per transfer
  string fixed_cost_per_transfer = 3;
}